Bug 48368 - CRASH closing IDE
Summary: CRASH closing IDE
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: BASIC (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: Other All
: medium critical
Assignee: Julien Nabet
URL:
Whiteboard: target:3.6.0
Keywords: regression
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-04-05 23:40 UTC by Cor Nouws
Modified: 2012-06-30 00:21 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
bt with symbols (4.70 KB, text/plain)
2012-04-14 14:11 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2012-04-05 23:40:57 UTC
- start LibreOffice
- new Writer document
- Alt-F11 > Edit
- Ctrl-W
  > the whole office is gone
- start LibreOffice again
  > document recoverey (nameless 1)
Comment 1 Cor Nouws 2012-04-06 00:23:07 UTC
also broken in LOdev 36daily120326 3.6.0alpha0+ 
Build ID: a04fee7-4d74905-6299bf6-879ce36-4c023a
Comment 2 m_a_riosv 2012-04-07 16:57:01 UTC
Can0t confirm in LibreOffice 3.5.2.2
Build ID: 281b639-6baa1d3-ef66a77-d866f25-f36d45f
Win7x64 Ultimate
Comment 3 m_a_riosv 2012-04-07 16:57:36 UTC
Can't confirm in LibreOffice 3.5.2.2
Build ID: 281b639-6baa1d3-ef66a77-d866f25-f36d45f
Win7x64 Ultimate
Comment 4 Rainer Bielefeld Retired 2012-04-08 02:10:03 UTC
[Reproducible] with parallel  installation of  Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 4495824-6299bf6-ec8645]" (tinderbox: Win-x86@6-fast pull time 2012-04-08 00:03:52)

Noel:
One for you?
Comment 5 Noel Power 2012-04-08 13:20:58 UTC
(In reply to comment #4)
> [Reproducible] with parallel  installation of  Master "LOdev 3.6.0alpha0+  –
> WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 4495824-6299bf6-ec8645]"
> (tinderbox: Win-x86@6-fast pull time 2012-04-08 00:03:52)
> 
> Noel:
> One for you?

looks like it, had a quick look, can reproduce it ( linux ), hmm presumably this only happens on 3.6/master. There is a null pointer access ( that's easy to fix ) harder is to find out what changed and why this happens now :-). I've a couple of days fto, will get back to this when I return
Comment 6 Julien Nabet 2012-04-14 14:11:42 UTC
Created attachment 59985 [details]
bt with symbols

Reproduced on master updated today (pc Debian x86-64).
Attached bt.
Comment 7 Julien Nabet 2012-04-14 14:21:23 UTC
I proposed a patch to review on dev mailing list :
http://nabble.documentfoundation.org/PATCH-fix-proposed-for-fdo-48368-td3910905.html
Comment 8 Gökçen Eraslan 2012-04-16 04:52:02 UTC
Comment on attachment 59985 [details]
bt with symbols

Better to change mimetype of the attachment to text/plain instead of application/octet-stream.
Comment 9 Not Assigned 2012-04-16 12:17:55 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8bfee2c0eb6fcec49d05562bf1cb945356a4180e

Resolves: fdo#48368 CRASH closing IDE
Comment 10 Cor Nouws 2012-05-01 05:38:48 UTC
thanks ! 
verified in version 3.6.0alpha0+ Build ID: 87897ea
Comment 11 Rainer Bielefeld Retired 2012-06-30 00:21:16 UTC
"Assigned To" due to facts