Resolves: fdo#48368 CRASH closing IDE